codex-rs/tui/src/app/snapshots/codex_tui__app__daemon_menu__tests__daemon_disconnected.snap
---
source: tui/src/app/daemon_menu_tests.rs
assertion_line: 152
expression: "render_bottom_popup(&app.chat_widget, 80)"
---
  Daemon
  Not connected to the local background server.


     Install latest public stable (disabled)  codex-shake keeps the daemon on
                                              this CLI build
› 1. Use this CLI build

  enter select · esc back
